# datashield-base

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/datashield_base/: __init__.py  models.py  plots.py  stats.py
src/tests/: test_base.py  test_glm.py  test_plots.py
src/tests/data/: glm2-legacy-out.json  glm2-out.json
