[project]
name = "datashield-base"
version = "0.1.1"
description = "DataSHIELD Base Client implementation in Python"
readme = "README.md"
authors = [
    { name = "Yannick Marcon", email = "yannick.marcon@obiba.org" }
]
license = "LGPL-2.1-or-later"
requires-python = ">=3.11"
dependencies = [
    "datashield>=0.5.1",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
test = [
    "pytest>=7.2.2",
    "datashield-opal>=0.3.0",
]
dev = [
    "ruff>=0.10.0",
]

[project.urls]
Homepage = "https://www.datashield.org"
Repository = "https://github.com/obiba/datashield-base"
Documentation = "https://obiba.org/datashield-base"
"Bug Tracker" = "https://github.com/obiba/datashield-base/issues"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
